pipeline/pipelines-ui/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline-ui
  labels:
    app: ml-pipeline-ui
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: ml-pipeline-ui
---
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline-tensorboard-ui
  labels:
    app: ml-pipeline-tensorboard-ui
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: ml-pipeline-tensorboard-ui
